feat: complete auth
